# Math3D

./: .clang-format  .editorconfig  .gitattributes  .gitignore
Math3D/: .editorconfig  Math3D.sln
Math3D/Math3D/: .clang-format  MatHelper.hpp  Math3D.cpp  Math3D.h  Math3D.vcxproj  Math3D.vcxproj.filters  SVDTest.cpp  ShapeContextTest.cpp  UnityCamera.h  eigenMatrix.cpp  extrinsics.yml  mainpoisson.cpp  poisson_disc_distribution.hpp  stdafx.h
Simulation/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  NewAssembly.csproj  Simulation.csproj  Simulation.sln  UnitTest.csproj  新建文本文档.txt
Simulation/Assets/Calibration/: Calibration.cs  CameraData.cs  TranInfo.cs  cam1.renderTexture  cam2.renderTexture
Simulation/Assets/Code/: quat.cs
Simulation/Assets/Data/: Config.cs
Simulation/Assets/Display/: CvScene.cs  Display.cs  Estimate.cs  JsonTypeBind.cs  Observe.cs  U3DJsonSetting.cs  cvScene2.cs
Simulation/Assets/Libs/: AutoMapper.XML
Simulation/Assets/Plugins/: Newtonsoft.Json.xml  xuexue.utility.xml
Simulation/Assets/Resources/: DOTweenSettings.asset
Simulation/Assets/Scenes/: Calibration.unity  GC4000-c-Calib.unity  GC4000-c.unity  GC4000.unity  GyroTest.unity  SCtest.unity  StereoCamera.unity  Test.unity  V27.unity  display.unity
Simulation/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
Simulation/UserSettings/: EditorUserSettings.asset
VSCodeCpp/: CMakeLists.txt  main.cpp
VSCodeCpp/Math/: Math.hpp
omake/: Camera-F3DSC01.json  stereoCalib.json
(+94 files in other folders)
